public/stylesheets/admin/admin.css
/* ... */
    .adr .fn {
      font-weight: bold; }
    .adr h4 {
      margin-bottom: 1em;
      border-bottom: 1px solid #ccc;
      padding-bottom: .5em;
      color: #666; }
  ul.taxonomy-tree {
    cursor: default;
    list-style: none;
    margin: 0;
    padding: 0 0 0 35px;
    min-height: 2em; }
    ul.taxonomy-tree li.taxon {
      clear: both;
      padding: 5px; }
      ul.taxonomy-tree li.taxon span,
      ul.taxonomy-tree li.taxon input {
        float: left;
        margin-right: 1em; }
      ul.taxonomy-tree li.taxon .name {
        float: left;
        cursor: move; }
      ul.taxonomy-tree li.taxon.new ul.taxonomy-actions,
      ul.taxonomy-tree li.taxon.editing ul.taxonomy-actions {
        display: none; }
      ul.taxonomy-tree li.taxon.to-destroy {
        color: #900;
        text-decoration: line-through; }
        ul.taxonomy-tree li.taxon.to-destroy ul.taxonomy-actions {
          display: none; }
  .placeholder {
    height: 30px;
    clear: both;
    border: dashed 2px #ddd; }
  ul.taxonomy-actions {
    float: left;
    list-style: none;
    margin: 0px 0px 10px 10px;
    padding: 0; }
    ul.taxonomy-actions li {
      float: left;
      margin-right: 5px; }
      ul.taxonomy-actions li img {
        vertical-align: text-top; }
      ul.taxonomy-actions li.disabled {
        opacity: .5; }
  h3.warning {
    background-image: url(../../images/admin/icons/fugue/exclamation.png);
    background-position: 10px 15px;
    background-repeat: no-repeat;
    padding-left: 35px; }
  #searching {
    clear: both;
    margin-top: 2em; }


.pagination{
	padding-top: 10px;
	text-align: right;
}
a.page, span.page {  
	padding: 0px 5px; 
	margin: 0 3px;
}
a.page {  	  
	text-decoration: none;  
	border: 1px solid #9aafe5;
	color: #2e6ab1;	
}
a.page:hover, a.page:active {  
	border: 1px solid #2b66a5;
	color: #000;
	background-color: LightYellow;	
} 

a.next_page {
	font-weight: bold;
}


span.disabled_page {  
	border: 1px solid #929292;
	color: #929292;
} 

span.current_page {  
	font-weight: bold;
	border: 1px solid navy;
	background-color: #2e6ab1;
	color: #FFF;
}                  

div#calculator-settings-warning {
 color: #f00;
}
#progress{
	display:none;
	background:#154E8C url(../../images/admin/bg/admin_tab_back.png) repeat-x scroll left top;
	color:#fff;
	font-size:170%;
	height:25px;
	left:33%;
	padding:10px 0 15px;
	position:absolute;
	text-align:center;
	width:33%;
	font-weight:bold;
	-moz-border-radius-bottomleft:15px;
	-moz-border-radius-bottomright:15px;
}
#progress img{
	vertical-align:middle;
	padding-right:10px;
}
 
ul#shipping-specs {
  margin: 0;  
  padding-bottom:10px;  
}
ul#shipping-specs li {
  list-style-image:none;
  display:inline;
}

.product-scopes ul > li {
  float: left;
  width: 220px;
  margin-right: 20px;
}

.product-scopes .invalid {
  background-color: red;
}

div.product-preview-products {
  max-height: 200px;
  overflow: auto;
}

#preference-settings input, #preference-settings select, #preference-settings textarea{
  float:left;
 
}

#preference-settings input[type=text] {
  width: 250px;
}
#preference-settings label{
  clear:both;
  display:block;
  float:left;
  width:170px;
}

